--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/superduperkevin/snips-backend#readme",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1",
+    "pg-format": "^1.0.4",
     "shortid": "^2.2.14"
   }
 }
